--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@icodex/schematics",
   "version": "1.0.0",
   "description": "iCodeX architecture element generation based on Nest schematics 🎬",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "postbuild": "npm run copy:collection && npm run copy:lib",
     "build": "rm -rf dist && tsc --project tsconfig.lib.json",
