--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@icodex/schematics",
   "version": "1.0.0",
   "description": "iCodeX architecture element generation based on Nest schematics 🎬",
+  "author": "Felix Lau",
   "main": "src/index.ts",
   "scripts": {
     "postbuild": "npm run copy:collection && npm run copy:lib",
@@ -10,9 +11,12 @@
     "copy:lib": "cpx 'src/lib/**/{files,workspace}/**/*.*' dist/lib && cpx 'src/lib/**/{files,workspace}/**/.!(gitignore)' dist/lib",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "dependencies": {
+    "@angular-devkit/core": "^18.2.8",
+    "@angular-devkit/schematics": "^18.2.8",
+    "path": "^0.12.7"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "8.8.1",
     "@typescript-eslint/parser": "8.8.1",
@@ -24,11 +28,6 @@
     "prettier": "3.3.3",
     "prettier-plugin-organize-imports": "4.1.0",
     "typescript": "^5.6.3"
-  },
-  "dependencies": {
-    "@angular-devkit/core": "^18.2.8",
-    "@angular-devkit/schematics": "^18.2.8",
-    "path": "^0.12.7"
   },
   "schematics": "./dist/collection.json"
 }
